<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <!-- Campo para ingresar el nombre de la asignatura -->
    <EditText
        android:id="@+id/entradaAsignatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_asignatura"
        android:layout_marginBottom="15dp"
        />

    <!-- Campo para ingresar la nota de la asignatura -->
    <EditText
        android:id="@+id/entradaNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nota"
        android:inputType="numberDecimal"
        android:layout_marginBottom="15dp"
        />

    <!-- Boton para guardar la asignatura introducida -->
    <Button
        android:id="@+id/botonGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar_asignatura"
        android:layout_marginBottom="15dp"
        />

    <!-- Boton para mostrar las asignaturas guardadas -->
    <Button
        android:id="@+id/botonConsultar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultar_calificaciones" />

</LinearLayout>
